  either getdents64, readdir64 or readdir.

Security related changes:

  CVE-2022-23219: Passing an overlong file name to the clnt_create
  legacy function could result in a stack-based buffer overflow when
  using the "unix" protocol.  Reported by Martin Sebor.

  CVE-2022-23218: Passing an overlong file name to the svcunix_create
  legacy function could result in a stack-based buffer overflow.

The following bugs are resolved with this release:

  [12889] nptl: Fix race between pthread_kill and thread exit
  [19193] nptl: pthread_kill, pthread_cancel should not fail after exit
  [22542] CVE-2022-23219: Buffer overflow in sunrpc clnt_create for "unix"
  [28036] Incorrect types for pthread_mutexattr_set/getrobust_np
  [28182] _TIME_BITS=64 in C++ has issues with fcntl, ioctl, prctl
  [28223] mips: clone does not align stack
  [28310] Do not use affinity mask for sysconf (_SC_NPROCESSORS_CONF)
  [28338] undefined behavior in __tzfile_compute with oddball TZif file
  [28340] ld.so crashes while loading a DSO with a read-only dynamic section
  [28357] deadlock between pthread_create and ELF constructors
  [28361] nptl: Avoid setxid deadlock with blocked signals in thread exit
  [28407] pthread_kill assumes that kill and tgkill are equivalent
  [28524] Conversion from ISO-2022-JP-3 with iconv may emit spurious NULs
  [28532] powerpc64[le]: CFI for assembly templated syscalls is incorrect
  [28607] Masked signals are delivered on thread exit
  [28678] nptl/tst-create1 hangs sporadically
  [28700] "dns [!UNAVAIL=return] files" NSS default for hosts is not useful
  [28702] RISC-V: clone does not align stack
  [28703] RISC-V: _dl_init might be called with unaligned stack
  [28704] elf/tst-cpu-features-cpuinfo fails for KVM guests on some AMD systems
  [28707] assert in tzfile.c __tzfile_read striking with truncated timezones
  [28744] A64FX string functions are selected without SVE HWCAP
  [28771] %ebx optimization macros are incompatible with .altmacro